# Brightness

./: .gitignore  .quickly  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  License  README (copy).md  README.md  brightness-controller.desktop.in  brightness-reset  changelog.md  index.html  params.json  readme.md  requirements.in  requirements.txt  setup.py
.bzr/branch/: last-revision
.bzr/checkout/: dirstate
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.mypy_cache/3.6/: __main__.data.json  __main__.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  getpass.data.json  getpass.meta.json  init.data.json  init.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  subprocess.data.json  subprocess.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  io.data.json  (+17 more)
brightness-controller-linux/: README.md  pyproject.oldtoml  pyproject.toml
brightness-controller-linux/brightness_controller_linux/: init.py
brightness-controller-linux/brightness_controller_linux/ui/: __init__.py  about.py  about.ui  help.py  license.py
brightness-controller-linux/brightness_controller_linux/util/: check_displays.py  resource_provider.py  write_config.py
brightness-controller-linux/src/brightness_controller_linux/: brightness-reset  init.py
brightness-controller-linux/src/brightness_controller_linux/ui/: about.py  mainwindow.py
brightness-controller-linux/src/brightness_controller_linux/util/: QtSingleApplication.py  filepath_handler.py  resource_provider.py  write_config.py
brightness-controller-linux/tests/: test_brightness_controller_linux.py  test_check_displays.py  test_resource_provider.py  xrandr_query_two.txt
brightness_controller/: BrightnessControllerWindow.py  __init__.py
brightness_controller_lib/: Builder.py  PreferencesDialog.py  Window.py  __init__.py  brightness_controllerconfig.py  helpers.py
debian/: changelog  control  copyright  files  install
src/: Brightness.py  brightness.desktop  brightness.py  init.py  mainwindow.py  mainwindow.py.old  setup.py  systray.qrc
tests/: test_example.py  test_lint.py
(+104 files in other folders)
