[tool.poetry]
name = "brightness-controller-linux"
version = "2.3.4"
description = "Using Brightness Controller, you can control brightness of both primary and external displays in Linux. Check it out!"
authors = ["Amit <lordamit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
QtPy = "^2.2.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.group.dev.dependencies]
PyQt5 = "^5.15.7"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
