[tool.poetry]
name = "brightness-controller-linux"
version = "2.4"
description = "Using Brightness Controller, you can control brightness of both primary and external displays in Linux. Check it out!"
authors = ["Amit <lordamit@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/LordAmit/Brightness"
repository = "https://github.com/LordAmit/Brightness"
keywords = [
    "brightness",
    "brightness controller",
    "linux",
    "xrandr",
    "brightness controller linux"
    ]
include = ["brightness_controller_linux/util",
    "brightness_controller_linux/icons",
    "brightness_controller_linux/ui"]

[tool.poetry.dependencies]
python = "^3.8"
QtPy = "^2.2.0"
PyQt5 = {version = "^5.15"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.scripts]
brightness-controller = "brightness_controller_linux.init:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
